# cactus

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  index.html  llms.txt  mkdocs.yml  models.json  setup  sitemap.xml  versions.json
android/: CMakeLists.txt  Cactus.android.kt  Cactus.common.kt  Cactus.ios.kt  Cactus.kt  README.md  build.sh  cactus_jni.cpp
cactus/: CMakeLists.txt  build.sh  cactus.h
cactus-engine/: CMakeLists.txt  cactus_engine.h  test.sh
cactus-engine/models/: model.h  model_lfm2.cpp  model_lfm2vl.cpp  model_qwen.cpp  model_siglip2.cpp
cactus-engine/models/gemma4/: model_gemma4.cpp  model_gemma4.h  model_gemma4_audio.cpp  model_gemma4_mm.cpp  model_gemma4_vision.cpp
cactus-engine/src/: cloud.cpp  cloud.h  complete.cpp  constraints.cpp  embed.cpp  engine.h  engine_image.cpp  gemma_tools.h  grammar.cpp  grammar_ffi.cpp  graph_ffi.cpp  index.cpp  index_ffi.cpp  init.cpp  log.cpp  model.cpp  npu.cpp  npu_ane.h  npu_ane.mm  rag.cpp  sp.cpp  telemetry.cpp  telemetry.h  telemetry_impl.cpp  tokenizer.cpp  transcribe.cpp  utils.h
cactus-engine/tests/: CMakeLists.txt  chat.cpp  test_embed.cpp  test_grammar.cpp  test_index.cpp  test_llm.cpp  test_model_loading.cpp  test_rag.cpp  test_stt.cpp  test_telemetry.cpp  test_utils.cpp  test_utils.h  test_vlm.cpp
cactus-engine/tests/assets/rag_corpus/: rag_sample1.txt
cactus-graph/: CMakeLists.txt  build.sh  cactus_graph.h  test.sh
cactus-graph/src/: builder.cpp  core.cpp  execute.cpp  io.cpp  ops_cache.cpp  ops_conv.cpp  ops_dsp.cpp  ops_image.cpp  ops_math.cpp  ops_nn.cpp  ops_recurrent.cpp  ops_sample.cpp  ops_tensor.cpp  param_io.cpp  param_io.h
cactus-graph/tests/: test_cache.cpp  test_dsp_ops.cpp  test_graph.cpp  test_image.cpp  test_io.cpp  test_nn.cpp  test_ops.cpp  test_precision.cpp  test_utils.h
cactus-kernels/: CMakeLists.txt  build.sh  cactus_kernels.h  test.sh
cactus-kernels/libs/: stb_image.h  stb_image_resize2.h
cactus-kernels/src/: attention.cpp  attention_hybrid.cpp  blas.cpp  conv.cpp  conv2d.cpp  dsp.cpp  fused.cpp  image.cpp  lstm.cpp  matmul.cpp  nn.cpp  norms_rope.cpp  quants.cpp  reduce.cpp  scalar.cpp  threading.h
cactus-kernels/tests/: test_attention.cpp  test_conv.cpp  test_dsp.cpp  test_elementwise.cpp  test_matmul.cpp  test_quant.cpp  test_reduce.cpp  test_sample.cpp  test_utils.h
cactus/engine/: engine.h  engine_bpe.cpp  engine_cache.cpp  engine_constraints.cpp  engine_grammar.cpp  engine_image.cpp  engine_model.cpp  engine_signals.cpp  engine_sp.cpp  engine_tokenizer.cpp
cactus/ffi/: cactus_cloud.cpp  cactus_complete.cpp  cactus_diarize.cpp  cactus_embed.cpp  cactus_embed_speaker.cpp  cactus_ffi.h  cactus_grammar.cpp  cactus_graph.cpp  cactus_init.cpp  cactus_log.cpp  cactus_stream.cpp  cactus_telemetry.cpp  cactus_transcribe.cpp  cactus_utils.h  ffi_utils.h  gemma_tools.h  lfm2_tools.h
cactus/grammar/: grammar.cpp  grammar.h  matcher.cpp
cactus/graph/: graph.h  graph_builder.cpp  graph_core.cpp  graph_execute.cpp  graph_io.cpp  graph_ops_math.cpp  graph_ops_nn.cpp  graph_ops_sample.cpp  graph_ops_tensor.cpp  graph_param_io.cpp  graph_param_io.h
cactus/kernel/: kernel.h  kernel_altup.cpp  kernel_attention.cpp  kernel_bilstm.cpp  kernel_blas.cpp  kernel_conv.cpp  kernel_deltanet.cpp  kernel_i8mm.cpp  kernel_matmul.cpp  kernel_nn.cpp  kernel_reduce.cpp  kernel_scalar.cpp  kernel_utils.h
cactus/models/: model.h  model_gemma3n.cpp  model_lfm2vl.cpp  model_moonshine.cpp  model_needle.cpp  model_parakeet.cpp  model_parakeet_tdt.cpp  model_pyannote.cpp  model_qwen3p5.cpp  model_siglip2.cpp  model_wespeaker.cpp  model_whisper.cpp  model_youtu.cpp
cactus/models/gemma4/: model_gemma4.cpp  model_gemma4.h  model_gemma4_audio.cpp  model_gemma4_mm.cpp  model_gemma4_vision.cpp
cactus/npu/: npu.h  npu_ane.h  npu_ane.mm
cactus/telemetry/: telemetry.cpp
python/: README.md  pyproject.toml  requirements.txt  test.py
python/cactus/: __init__.py
python/cactus/bindings/: cactus.py  graph.py
python/cactus/cli/: __init__.py  common.py  compile.py  config_utils.py  convert.py  download.py  eval.py  misc.py  publish_to_hf.py  run.py  test.py  transcribe.py  transpile.py
python/cactus/convert/: __init__.py  cli.py  compat.py
python/cactus/convert/cactus_adapters/: __init__.py  config_utils.py  tensor_io.py  weight_patterns.py
python/cactus/transpile/: README.md  __init__.py  aten_ops.py  audio_preprocess.py  capture_pytorch.py  component_bundle_runtime.py  component_partition.py  component_pipeline.py  component_plan.py  graph_ir.py  hf_model.py  import_ir.py  import_semantics.py  importers.py  lower.py  media_limits.py  model_adapters.py  model_patterns.py  model_profiles.py  multimodal_runtime.py  normalize.py  ops.py  optimize_graph.py  runtime_compat.py  runtime_support.py  tdt_runtime.py  weight_binding.py  weight_compat.py
python/src/: __init__.py  cactus.py  cli.py  config_utils.py  converter.py  downloads.py  graph.py  publish_to_hf.py  tensor_io.py  tokenizer.py  weight_patterns.py
python/src/transpile/: test_capture.py
python/tests/: test_capture.py  test_cli_run_transpiled.py  test_cli_transpile_defaults.py  test_component_partition.py  test_download.py  test_graph.py  test_model.py  test_optimize_gemma4_attention.py  test_transpile_aten_ops.py  test_transpile_weight_compat.py  test_whisper_seq2seq_bundle.py
python/tests/transpile/: __init__.py
tests/: CMakeLists.txt  asr.cpp  chat.cpp  generate_audio_reference.py  run.sh  test_audio_chat_pcm.cpp  test_audio_cosine.cpp  test_engine.cpp  test_exhaustive.cpp  test_gemma4_audio.cpp  test_gemma4_audio_image_audio.cpp  test_gemma4_audio_layers.cpp  test_gemma4_suite.cpp  test_gemma4_thinking.cpp  test_gemma4_vision.cpp  test_grammar.cpp  test_graph.cpp  test_kernel.cpp  test_kv_cache.cpp  test_llm.cpp  test_needle_eval.py  test_performance.cpp  test_rag.cpp  test_stt.cpp  test_telemetry.cpp  test_tokenizer.cpp  test_tool_parsing.cpp  test_utils.cpp  test_utils.h  test_vlm.cpp
tests/android/: run.sh
tests/golden/: generate_exhaustive_golden.sh  golden.json
tests/ios/: configure_xcode.rb  run.sh
(+150 files in other folders)
