[project]
name = "cactus"
version = "0.1.0"
description = "Cactus Python tools"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers>=5.5.4,<6",
    "numpy",
    "huggingface-hub>=1.5.0,<2.0",
    "backports.lzma>=0.0.14",
]

[project.optional-dependencies]
vlm = ["Pillow", "num2words", "torchvision"]
lora = ["peft"]

[project.scripts]
cactus = "cactus.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cactus*"]
