cmake_minimum_required(VERSION 3.10)
project(CactusTests LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CACTUS_XGRAMMAR_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../libs/xgrammar" CACHE PATH "Path to vendored xgrammar artifacts")
set(CACTUS_XGRAMMAR_INCLUDE_DIR "${CACTUS_XGRAMMAR_ROOT}/include")

function(cactus_require_vendored_curl include_dir library_path platform_label)
    if(NOT EXISTS "${include_dir}/curl/curl.h" OR NOT EXISTS "${library_path}")
        message(WARNING "==============================================================================")
        message(WARNING " Vendored libcurl is required for ${platform_label} tests but is missing.")
        message(WARNING " Expected header: ${include_dir}/curl/curl.h")
        message(WARNING " Expected library: ${library_path}")
        message(WARNING " Populate libs/curl from your local curl build before running cactus test.")
        message(WARNING "==============================================================================")
        message(FATAL_ERROR "Missing vendored libcurl artifacts for ${platform_label} tests")
    endif()
endfunction()

function(cactus_require_vendored_xgrammar include_dir library_path platform_label)
    if(NOT EXISTS "${include_dir}/xgrammar/xgrammar.h" OR NOT EXISTS "${library_path}")
        message(WARNING "==============================================================================")
        message(WARNING " Vendored xgrammar is required for ${platform_label} tests but is missing.")
        message(WARNING " Expected header: ${include_dir}/xgrammar/xgrammar.h")
        message(WARNING " Expected library: ${library_path}")
        message(WARNING " Populate libs/xgrammar from your local xgrammar build before running cactus test.")
        message(WARNING "==============================================================================")
        message(FATAL_ERROR "Missing vendored xgrammar artifacts for ${platform_label} tests")
    endif()
endfunction()

if(APPLE)
    set(CMAKE_OSX_ARCHITECTURES "arm64")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -arch arm64 -pthread -Wall -Wextra -pedantic -O3")
    set(CACTUS_CURL_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../libs/curl" CACHE PATH "Path to vendored libcurl artifacts")
    set(CACTUS_CURL_INCLUDE_DIR "${CACTUS_CURL_ROOT}/include")
    set(CACTUS_CURL_LIBRARY_MACOS "${CACTUS_CURL_ROOT}/macos/libcurl.a")
    cactus_require_vendored_curl("${CACTUS_CURL_INCLUDE_DIR}" "${CACTUS_CURL_LIBRARY_MACOS}" "macOS")
    set(CACTUS_XGRAMMAR_LIBRARY "${CACTUS_XGRAMMAR_ROOT}/macos/libxgrammar.a")
    cactus_require_vendored_xgrammar("${CACTUS_XGRAMMAR_INCLUDE_DIR}" "${CACTUS_XGRAMMAR_LIBRARY}" "macOS")
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux" AND (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "arm64"))
    find_package(CURL)
    set(CACTUS_XGRAMMAR_LIBRARY "${CACTUS_XGRAMMAR_ROOT}/linux/aarch64/libxgrammar.a")
    cactus_require_vendored_xgrammar("${CACTUS_XGRAMMAR_INCLUDE_DIR}" "${CACTUS_XGRAMMAR_LIBRARY}" "Linux aarch64")
else()
    find_package(CURL)
    message(FATAL_ERROR "Unsupported platform for vendored xgrammar tests: ${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_PROCESSOR}")
endif()

set(CACTUS_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../cactus)
set(CACTUS_BUILD_DIR ${CACTUS_ROOT}/build)

find_library(CACTUS_LIB
    NAMES cactus
    HINTS ${CACTUS_BUILD_DIR} ${CACTUS_BUILD_DIR}/lib
    REQUIRED
)
 
set(MMAN_LIB "")
if(NOT APPLE)
    find_library(MMAN_LIB mman)
    if(MMAN_LIB)
        message(STATUS "Found libmman: ${MMAN_LIB}")
    else()
        message(STATUS "libmman not found; assuming mmap symbols are provided by the C runtime")
    endif()
else()
    find_library(COREML_FRAMEWORK CoreML REQUIRED)
    find_library(FOUNDATION_FRAMEWORK Foundation REQUIRED)
    find_library(ACCELERATE_FRAMEWORK Accelerate REQUIRED)
    find_library(SECURITY_FRAMEWORK Security REQUIRED)
    find_library(SYSTEMCONFIGURATION_FRAMEWORK SystemConfiguration REQUIRED)
    find_library(CFNETWORK_FRAMEWORK CFNetwork REQUIRED)
endif()

find_package(SDL2)
if(SDL2_FOUND)
    message(STATUS "Found SDL2: ${SDL2_LIBRARIES}")
else()
    message(STATUS "SDL2 not found; microphone tests will be skipped")
endif()

file(GLOB TEST_SOURCES "test_*.cpp")
list(REMOVE_ITEM TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/test_utils.cpp")

foreach(TEST_FILE ${TEST_SOURCES})

    get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
    add_executable(${TEST_NAME} ${TEST_FILE} test_utils.cpp)
    target_link_libraries(${TEST_NAME} PRIVATE ${CACTUS_LIB})
    target_link_libraries(${TEST_NAME} PRIVATE ${CACTUS_XGRAMMAR_LIBRARY})


    if(MMAN_LIB)
        target_link_libraries(${TEST_NAME} PRIVATE ${MMAN_LIB})
        message(STATUS "Test ${TEST_NAME} will link with -lmman")
    endif()

    if(SDL2_FOUND)
        target_link_libraries(${TEST_NAME} PRIVATE ${SDL2_LIBRARIES})
        target_include_directories(${TEST_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
        target_compile_definitions(${TEST_NAME} PRIVATE HAVE_SDL2)
        message(STATUS "Test ${TEST_NAME} will link with SDL2")
    endif()

    if(APPLE)
        target_link_libraries(${TEST_NAME} PRIVATE ${CACTUS_CURL_LIBRARY_MACOS})
        target_include_directories(${TEST_NAME} PRIVATE ${CACTUS_CURL_INCLUDE_DIR})
        message(STATUS "Test ${TEST_NAME} will link with libcurl")
    elseif(CURL_FOUND)
        target_link_libraries(${TEST_NAME} PRIVATE ${CURL_LIBRARIES})
        target_include_directories(${TEST_NAME} PRIVATE ${CURL_INCLUDE_DIRS})
        message(STATUS "Test ${TEST_NAME} will link with system libcurl")
    endif()
    if(APPLE)
        target_link_libraries(${TEST_NAME} PRIVATE
            ${ACCELERATE_FRAMEWORK}
            ${COREML_FRAMEWORK}
            ${FOUNDATION_FRAMEWORK}
            ${SECURITY_FRAMEWORK}
            ${SYSTEMCONFIGURATION_FRAMEWORK}
            ${CFNETWORK_FRAMEWORK}
        )
    endif()

    target_include_directories(${TEST_NAME} PRIVATE ${CACTUS_ROOT} ${CACTUS_XGRAMMAR_INCLUDE_DIR})

    message(STATUS "Added test: ${TEST_NAME}")
endforeach()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

foreach(APP_NAME chat asr)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${APP_NAME}.cpp")
        add_executable(${APP_NAME} ${APP_NAME}.cpp)
        target_link_libraries(${APP_NAME} PRIVATE ${CACTUS_LIB})
        target_link_libraries(${APP_NAME} PRIVATE ${CACTUS_XGRAMMAR_LIBRARY})

        if(MMAN_LIB)
            target_link_libraries(${APP_NAME} PRIVATE ${MMAN_LIB})
        endif()

        if(APPLE)
            target_link_libraries(${APP_NAME} PRIVATE ${CACTUS_CURL_LIBRARY_MACOS})
            target_include_directories(${APP_NAME} PRIVATE ${CACTUS_CURL_INCLUDE_DIR})
        elseif(CURL_FOUND)
            target_link_libraries(${APP_NAME} PRIVATE ${CURL_LIBRARIES})
            target_include_directories(${APP_NAME} PRIVATE ${CURL_INCLUDE_DIRS})
        endif()
        if(APPLE)
            target_link_libraries(${APP_NAME} PRIVATE
                ${ACCELERATE_FRAMEWORK}
                ${COREML_FRAMEWORK}
                ${FOUNDATION_FRAMEWORK}
                ${SECURITY_FRAMEWORK}
                ${SYSTEMCONFIGURATION_FRAMEWORK}
                ${CFNETWORK_FRAMEWORK}
            )
        endif()

        if(SDL2_FOUND AND (APP_NAME STREQUAL "asr" OR APP_NAME STREQUAL "chat"))
            target_link_libraries(${APP_NAME} PRIVATE ${SDL2_LIBRARIES})
            target_include_directories(${APP_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
            target_compile_definitions(${APP_NAME} PRIVATE HAVE_SDL2)
            message(STATUS "${APP_NAME} will link with SDL2 for live audio")
        endif()

        target_include_directories(${APP_NAME} PRIVATE ${CACTUS_ROOT} ${CACTUS_XGRAMMAR_INCLUDE_DIR})
        message(STATUS "Added executable: ${APP_NAME}")
    endif()
endforeach()
